feat: add get tasks and task by id api
