# src/tasks/models/tasksManager.ts
@@ -3,7 +3,7 @@ import { CreateExportTaskRequest, TaskEvent, TaskParameters } from '@map-colonie
 import { inject, injectable } from 'tsyringe';
 import { Domain, EPSGDATA } from '@map-colonies/types';
 import { FeatureCollection } from '@turf/turf';
-import { BadRequestError } from '@map-colonies/error-types';
+import { BadRequestError, NotFoundError } from '@map-colonies/error-types';
 import { ExporterTriggerClient } from '../../clients/exporterTriggerClient';
 import { SERVICES } from '../../common/constants';
 import { ExportManagerRaster, WebhookParams } from '../../exportManager/exportManagerRaster';
@@ -13,11 +13,13 @@ import { ITaskResponse, WebhookEvent } from '../interfaces';
 import { ExportJobParameters, JobManagerClient } from '../../clients/jobManagerClient';
 import { OperationStatus } from '../enums';
 import { WebhookClient } from '../../clients/webhookClient';
-import { TaskRepository } from '../../DAL/repositories/taskRepository';
+import { TASK_ENTITY_CUSTOM_REPOSITORY_SYMBOL, TaskRepository } from '../../DAL/repositories/taskRepository';
+import { TaskModel } from '../../DAL/models/task';
+import { TaskEntity } from '../../DAL/entity/task';
 
 export interface CreateExportTaskExtendedRequest extends CreateExportTaskRequest<TaskParameters> {
   domain: Domain;
-  keywords: Record<string, unknown>;
+  keywords?: Record<string, unknown>;
 }
 
 export interface CreatePackageParams {
@@ -32,8 +34,7 @@ export interface CreatePackageParams {
 export class TasksManager {
   public constructor(
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
-    private readonly jobManagerClient: JobManagerClient,
-    private readonly taskRepository: TaskRepository,
+    @inject(TASK_ENTITY_CUSTOM_REPOSITORY_SYMBOL) private readonly taskRepository: TaskRepository,
     private readonly webhookClient: WebhookClient
   ) {}
 
@@ -44,43 +45,19 @@ export class TasksManager {
     return jobCreated;
   }
 
-  public async handleWebhookEvent(params: WebhookParams): Promise<void> {
-    const exportJob = await this.jobManagerClient.getJobById(params.jobId);
-    const jobParameters = exportJob.parameters;
-    const task: ITaskResponse<ExportJobParameters> = {
-      id: jobParameters.id,
-      catalogRecordID: params.recordCatalogId,
-      domain: Domain.RASTER,
-      // eslint-disable-next-line @typescript-eslint/naming-convention
-      ROI: params.roi,
-      artifactCRS: EPSGDATA[4326].code,
-      description: params.description,
-      keywords: jobParameters.keywords,
-      status: params.status,
-      artifacts: params.artifacts,
-      webhook: exportJob.parameters.webhook,
-      createdAt: new Date(exportJob.created),
-      finishedAt: new Date(exportJob.updated),
-      expiredAt: new Date(params.expirationTime),
-      errorReason: params.errorReason,
-    };
-    const webhook = jobParameters.webhook;
-    const webhookEvent: WebhookEvent<ExportJobParameters> = {
-      data: task,
-      event: params.status === OperationStatus.COMPLETED ? TaskEvent.TASK_COMPLETED : TaskEvent.TASK_FAILED,
-      timestamp: new Date(),
-    };
-
-    const webhookUrls = this.getWebhookUrls(webhook, task.status);
-    await this.sendWebhookEvent(webhookUrls, webhookEvent);
+  public async getTaskById(taskId: number): Promise<TaskEntity | undefined> {
+    const task = await this.taskRepository.findOneEntity(taskId);
+    if (task === undefined){
+      throw new NotFoundError(`Task id: ${taskId} not found`);
+    }
+    return task;
   }
 
-  public async createTask(req: CreateExportTaskExtendedRequest): Promise<void> {
-    const domain = req.domain;
-    const exportManagerInstance = this.getExportManagerInstance(domain);
-    const res = await exportManagerInstance.createExportTask(req);
-    console.log(res);
+  public async getTasks(limit: number = 10): Promise<TaskEntity[]> {
+    const tasks = await this.taskRepository.findEntitiesByLimit(limit);
+    return tasks;
   }
+
 
   private getExportManagerInstance(domain: Domain): IExportManager {
     let exportManagerInstance: IExportManager;
